# pytinyexr

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE-MIT  MANIFEST.in  PyEXR.cpp  PyEXR.h  README.md  build.py  pyproject.toml  setup.py  test.py  upload_source_to_pypi.sh
.github/workflows/: pythonpackage.yml
tests/: test.py
