[tool.poetry]
name = "tinyexr"
version = "0.9.1"
description = "Python binding for tinyexr"
license = "MIT"
authors = ["Syoyo Fujita <syoyo@lighttransport.com>"]
readme = 'README.md'
repository = "https://github.com/syoyo/pytinyexr"
homepage = "https://github.com/syoyo/pytinyexr"
keywords = ['OpenEXR', 'EXR', 'HDR']
exclude = ["tinyexr/*", "dist/*", "build/*", "data/*"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Manufacturing",
  "Topic :: Artistic Software",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
  "Topic :: Scientific/Engineering :: Visualization",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
setuptools = "^57.4.0"
pybind11 = "^2.10.1"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
flake8 = "^6.0.0"
mypy = "^0.991"
isort = "^5.10.1"
pytest = "^7.2.0"
numpy = "^1.23.5"
matplotlib = "^3.6.2"

[build-system]
requires = ["setuptools>=42", "poetry-core>=1.0.0", "pybind11~=2.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/*"
